examples/test/testpolicy15301.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15301
  namespace: namespace161
spec:
  podSelector:
    matchLabels:
      key39: value5
      key43: value27
      key30: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value38
      podSelector:
        matchLabels:
          key48: value10
          key9: value34
          key49: value31
